syntax = "proto3";

option go_package = "learn-go/grpc/route";


message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

message RouteSummary {
  int32 point_count = 1;
  int32 distance = 2;
  int32 elapsed_time = 3;
}

enum RecommendationMode {
  GetFarthest = 0;
  GetNearest = 1;
}

message RecommendationRequest {
    RecommendationMode mode = 1;
    Point point = 2;
}

service RouteGuide {
  rpc GetFeature(Point) returns (Feature) {}

  rpc ListFeatures(Rectangle) returns (stream Feature) {}

  rpc RecordRoute(stream Point) returns (RouteSummary) {}

  rpc Recommend(stream RecommendationRequest) returns (stream Feature) {}
}